Ticket #2052: Fixing overlapping issue with report dropdowns.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
@@ -4819,19 +4819,6 @@ body.widgets #main #footer #footer-inner, body.sidebar-first #main #footer #foot
   position: absolute;
   top: 12px;
   left: -40px;
-  z-index: 0;
-}
-.report #report-actions:before {
-  position: absolute;
-  content: "";
-  z-index: -1;
-  top: -7px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 7px;
-  background-color: #f3f4f4;
-  background-color: #e7e8ea;
 }
 .report #report-actions ul.content-actions {
   margin: 0;
